<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~ Copyright (c) 2021.  TechnoWolf FOSS
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~  The above copyright notice and this permission notice shall be included in all
  ~  copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        style="@style/TextAppearance.Nyx.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivAppIcon"
        app:layout_constraintTop_toTopOf="@+id/ivAppIcon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppDescription"
        style="@style/TextAppearance.Nyx.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_open_source"
        app:layout_constraintStart_toStartOf="@+id/tvAppName"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:background="?colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/ivAppIcon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selectDecryptionImage"
        style="@style/TextAppearance.Nyx.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_storage"
        android:drawablePadding="16dp"
        android:text="@string/select_decryption_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFaq"
        style="@style/TextAppearance.Nyx.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_faq"
        android:drawablePadding="16dp"
        android:text="@string/faq"
        app:layout_constraintEnd_toEndOf="@+id/selectDecryptionImage"
        app:layout_constraintStart_toStartOf="@+id/selectDecryptionImage"
        app:layout_constraintTop_toBottomOf="@+id/selectDecryptionImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDonation"
        style="@style/TextAppearance.Nyx.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_donate"
        android:drawablePadding="16dp"
        android:text="@string/donate"
        app:layout_constraintEnd_toEndOf="@+id/selectDecryptionImage"
        app:layout_constraintStart_toStartOf="@+id/selectDecryptionImage"
        app:layout_constraintTop_toBottomOf="@+id/tvFaq" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvInfo"
        style="@style/TextAppearance.Nyx.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="16dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/selectDecryptionImage"
        app:layout_constraintStart_toStartOf="@+id/selectDecryptionImage"
        app:layout_constraintTop_toBottomOf="@+id/tvDonation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDarkMode"
        style="@style/TextAppearance.Nyx.Subtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_dark_light"
        android:drawablePadding="16dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toStartOf="@+id/switchDarkMode"
        app:layout_constraintStart_toStartOf="@+id/selectDecryptionImage"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvDarkMode"
        app:layout_constraintEnd_toEndOf="@+id/selectDecryptionImage"
        app:layout_constraintTop_toTopOf="@+id/tvDarkMode" />


</androidx.constraintlayout.widget.ConstraintLayout>